# tree-sitter-pod

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter-pod.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tree_sitter_pod/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterPod/: pod.h
bindings/swift/TreeSitterPodTests/: TreeSitterPodTests.swift
queries/: highlights.scm
script/: bump-version
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: commands  data-regions  directives  interior-sequences
