[package]
name = "ts-parser-pod"
description = "Pod grammar for tree-sitter"
version = "1.0.0"
license = "Artistic-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pod"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-perl/tree-sitter-pod"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.0.87"

[dev-dependencies]
tree-sitter = "0.25.8"
